# xrfc

./: .gitignore  README.md  meson.build
.github/workflows/: ci.yml
examples/: 2.xrf  README.md  aaaaa.xrf  ascii.xrf  cat.xrf  hello.xrf  quine.xrf  rot13.xrf  truth.xrf
inc/: codegen.hpp  file-reader.hpp  optimization.hpp  parser.hpp  stack-simulator.hpp  stack-value.hpp  xrf-chunk.hpp  xrf-command.hpp
src/: codegen.cpp  file-reader.cpp  main.cpp  optimization.cpp  parser.cpp  stack-simulator.cpp  stack-value.cpp
subprojects/: cli11.wrap
test/: parser-test.cpp
